# bpla_hackathone

./: .gitignore  Dockerfile.auth  Dockerfile.camera  Dockerfile.connector  Dockerfile.fly_control  Dockerfile.hw_control  Dockerfile.lidar  Dockerfile.monitor  Dockerfile.navgate_glonas  Dockerfile.navgate_inertional  Dockerfile.navigate_glonas  Dockerfile.navigate_gps  Dockerfile.navigate_inertional  Dockerfile.sprayer  LICENSE  README.md  REPORT.md  config.ini  docker-compose.yml  requirements.txt
auth/: auth.py  producer.py
camera/: producer.py
connector/: connector.py  producer.py
fly_control/: consumer.py  fly_control.py  producer.py
hw_control/: consumer.py  hw_control.py  producer.py
lidar/: consumer.py  lidar.py  producer.py
monitor/: consumer.py  policies.py  producer.py
navgate_glonas/: producer.py
navigate_glonas/: navigate_glonas.py
navigate_gps/: navigate_gps.py  producer.py
navigate_inertional/: navigate_inertional.py  producer.py
sprayer/: producer.py  sprayer.py
storage/: logs.txt
web/: __main__.py  flask_app.py  pyproject.toml  server.py
web/configs/: logger_config.py
web/control_center/: __init__.py  dto.py  jwt_worker.py
web/control_center/handlers/: __init__.py  client.py  drone.py  task_manager.py
web/db/: __init__.py  __main__.py
web/db/models/: __init__.py  client_model.py  drone_model.py  task_model.py
web/db/workers/: __init__.py  client_worker.py  drone_worker.py
web/instance/: project.db
web/t/: __init__.py  client_t.py  drone_t.py
web/tests/: __init__.py  client_test.py  drone_test.py
(+8 files in other folders)
