[tool.poetry]
name = "hackathon-kasper"
version = "0.1.0"
description = ""
authors = ["nikkitkit007 <nikkitkit0707@mail.ru>"]
readme = "README.md"
packages = [{include = "hackathon_kasper"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pydantic = "^1.10.2"
Flask-JWT = "^0.3.2"
flask-sqlalchemy = "^3.0.2"
starlette = "^0.22.0"
requests = "^2.28.1"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
